--- a/src/components/style.css
+++ b/src/components/style.css
@@ -45,7 +45,7 @@ body {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   background: #fafafa;
-  font-family: weathericons;
+  font-family: 'Poiret One', cursive;
   display: flex;
   align-items: center;
   justify-content: space-around;
